--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Aplicação para cadastro de crientes</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring-doc.version>1.6.9</spring-doc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -32,10 +33,16 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${spring-doc.version}</version>
 		</dependency>
 
 		<dependency>
